// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VListTileAction.js should render component and match snapshot 1`] = `

<div class="list__tile__action">
</div>

`;

exports[`VListTileAction.js should render component with many children and match snapshot 1`] = `

<div class="list__tile__action list__tile__action--stack">
  <div>
  </div>
  <span>
  </span>
</div>

`;

exports[`VListTileAction.js should render component with static class and match snapshot 1`] = `

<div class="list__tile__action static-class">
</div>

`;
